--- a/About.html
+++ b/About.html
@@ -5,33 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Jesika Yusnita Laoly</title>
     <style>
-        /* IMPORT GOOGLE FONT */
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-        
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-
         /* HEADER */
         header {
-            background: linear-gradient(135deg, #00BFFF, #0066FF);
+            background-color: #00BFFF;
             color: white;
             padding: 20px;
             text-align: center;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
             animation: slideDown 1s ease-out;
         }
 
@@ -44,34 +23,31 @@
             height: 50px;
         }
 
-        nav ul {
-            list-style: none;
+        header nav ul {
             padding: 0;
-            margin-top: 10px;
+            list-style: none;
         }
 
-        nav ul li {
+        header nav ul li {
             display: inline;
-            margin: 0 15px;
+            margin: 0 10px;
         }
 
-        nav ul li a {
+        header nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            font-size: 18px;
-            transition: 0.3s;
+            transition: color 0.3s ease-in-out;
         }
 
-        nav ul li a:hover {
+        header nav ul li a:hover {
             color: #FFD700;
-            text-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
         }
 
         /* CONTAINER */
         .container {
             max-width: 800px;
-            margin: 100px auto 40px;
+            margin: 40px auto;
             padding: 20px;
             text-align: center;
         }
@@ -80,14 +56,9 @@
         .profile-card {
             background: white;
             padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
             animation: fadeIn 1s ease-in;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .profile-card:hover {
-            transform: scale(1.05);
         }
 
         @keyframes fadeIn {
@@ -96,21 +67,16 @@
         }
 
         .profile-card img {
-            width: 140px;
-            height: 140px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             object-fit: cover;
-            border: 5px solid #00BFFF;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .profile-card img:hover {
-            transform: rotate(10deg);
+            border: 4px solid #00BFFF;
         }
 
         .profile-card h2 {
             color: #00BFFF;
-            margin: 15px 0;
+            margin: 10px 0;
         }
 
         /* TABLE STYLE */
@@ -119,36 +85,27 @@
             border-collapse: collapse;
             width: 100%;
             max-width: 500px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            border-radius: 10px;
-            overflow: hidden;
-            animation: fadeIn 1.5s ease-in;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
 
         .bio-table, .bio-table th, .bio-table td {
             border: 1px solid #ddd;
-            padding: 12px;
+            padding: 10px;
             text-align: left;
         }
 
         .bio-table th {
             background-color: #00BFFF;
             color: white;
-            font-weight: bold;
-        }
-
-        .bio-table tr:nth-child(even) {
-            background-color: #f9f9f9;
         }
 
         /* FOOTER */
         footer {
-            background: linear-gradient(135deg, #00BFFF, #0066FF);
+            background-color: #00BFFF;
             color: white;
-            padding: 15px;
+            padding: 20px;
             text-align: center;
-            margin-top: 40px;
-            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+            margin-top: 20px;
             animation: fadeIn 2s ease-in;
         }
     </style>
@@ -167,6 +124,7 @@
     </nav>
 </header>
 
+<!-- ABOUT ME SECTION -->
 <div class="container">
     <div class="profile-card">
         <img src="https://lh3.googleusercontent.com/d/1EeQkvDIAx2DbhOTeuGk842MkT-wUy4k5" alt="Foto Profil"> 
@@ -176,13 +134,34 @@
 
     <h3>Biodata</h3>
     <table class="bio-table">
-        <tr><th>Informasi</th><th>Detail</th></tr>
-        <tr><td>Nama</td><td>Jesika Yusnita Laoly</td></tr>
-        <tr><td>NIM</td><td>220709064</td></tr>
-        <tr><td>Jurusan</td><td>Perpustakaan dan Sains Informasi</td></tr>
-        <tr><td>Fakultas</td><td>Ilmu Budaya</td></tr>
-        <tr><td>Perguruan Tinggi</td><td>Universitas Sumatera Utara</td></tr>
-        <tr><td>E-mail</td><td>jesikalaolay19@gmail.com</td></tr>
+        <tr>
+            <th>Informasi</th>
+            <th>Detail</th>
+        </tr>
+        <tr>
+            <td>Nama</td>
+            <td>Jesika Yusnita Laoly</td>
+        </tr>
+        <tr>
+            <td>NIM</td>
+            <td>220709064</td>
+        </tr>
+        <tr>
+            <td>Jurusan</td>
+            <td>Perpustakaan dan Sains Informasi</td>
+        </tr>
+        <tr>
+            <td>Fakultas</td>
+            <td>Ilmu Budaya</td>
+        </tr>
+        <tr>
+            <td>Perguruan Tinggi</td>
+            <td>Universitas Sumatera Utara</td>
+        </tr>
+        <tr>
+            <td>E-mail</td>
+            <td>jesikalaolay19@gmail.com</td>
+        </tr>
     </table>
 </div>
 
