--- a/index.html
+++ b/index.html
@@ -5,41 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Jesika Yusnita Laoly</title>
     <style>
-        /* DROPDOWN */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #00BFFF;
-    min-width: 200px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
-    border-radius: 0 0 10px 10px;
-}
-
-.dropdown-content li {
-    display: block;
-}
-
-.dropdown-content li a {
-    color: white;
-    padding: 12px 16px;
-    display: block;
-    text-align: left;
-    text-decoration: none;
-}
-
-.dropdown-content li a:hover {
-    background-color: #007acc;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
+        
         /* HEADER */
         header {
             background-color: #00BFFF;
@@ -189,13 +155,20 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
     <h1>Perpustakaan Jesika Yusnita Laoly</h1>
     <nav>
-        <ul>
-            <li><a href="index.html">Homepage</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="http://localhost/tabel.php">PHP</a></li>
-        </ul>
-    </nav>
+    <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li class="dropdown">
+            <a href="About.html">About</a>
+            <ul class="dropdown-content">
+                <li><a href="#profil">Profil</a></li>
+                <li><a href="#visi">Visi & Misi</a></li>
+                <li><a href="#layanan">layanan</a></li>
+            </ul>
+        </li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="http://localhost/tabel.php">PHP</a></li>
+    </ul>
+</nav>
 </header>
 
 <!-- TENTANG SAYA -->
