--- a/index.html
+++ b/index.html
@@ -5,57 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Jesika Yusnita Laoly</title>
     <style>
-        
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
         /* HEADER */
         header {
             background-color: #00BFFF;
             color: white;
             padding: 20px 10px;
             text-align: center;
-            animation: slideDown 1s ease-out;
-        }
-
-        @keyframes slideDown {
-            from { transform: translateY(-100px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+            position: relative;
         }
 
         header img {
             height: 50px;
         }
 
-        header nav ul {
-            padding: 0;
-            list-style: none;
+        /* NAVIGATION */
+        nav {
+            margin-top: 10px;
         }
 
-        header nav ul li {
-            display: inline;
+        .nav-links {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .nav-links li {
+            display: inline-block;
             margin: 0 10px;
         }
 
-        header nav ul li a {
+        .nav-links a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s ease-in-out;
         }
 
-        header nav ul li a:hover {
+        .nav-links a:hover {
             color: #FFD700;
         }
 
-        /* ANIMASI FADE-IN */
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 1s ease-out, transform 1s ease-out;
+        /* HAMBURGER */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            position: absolute;
+            top: 25px;
+            right: 20px;
         }
 
-        .visible {
-            opacity: 1;
-            transform: translateY(0);
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 4px 0;
+            transition: 0.4s;
         }
+
+        /* DROPDOWN STYLE FOR SMALL SCREENS */
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                background-color: #00BFFF;
+                position: absolute;
+                top: 70px;
+                right: 0;
+                width: 100%;
+                text-align: center;
+                z-index: 1000;
+            }
+
+            .nav-links li {
+                display: block;
+                margin: 15px 0;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .nav-active {
+                display: flex;
+            }
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+
+    <!-- Hamburger Icon -->
+    <div class="hamburger" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <!-- Navigation Links -->
+    <nav>
+        <ul class="nav-links" id="navLinks">
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="http://localhost/tabel.php">PHP</a></li>
+        </ul>
+    </nav>
+</header>
+
+<script>
+    function toggleMenu() {
+        document.getElementById("navLinks").classList.toggle("nav-active");
+    }
 
         /* SECTION "TENTANG SAYA" */
         .about {
@@ -150,26 +218,6 @@
     </style>
 </head>
 <body>
-
-<header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-    <nav>
-    <ul>
-        <li><a href="index.html">Homepage</a></li>
-        <li class="dropdown">
-            <a href="About.html">About</a>
-            <ul class="dropdown-content">
-                <li><a href="#profil">Profil</a></li>
-                <li><a href="#visi">Visi & Misi</a></li>
-                <li><a href="#layanan">layanan</a></li>
-            </ul>
-        </li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="http://localhost/tabel.php">PHP</a></li>
-    </ul>
-</nav>
-</header>
 
 <!-- TENTANG SAYA -->
 <div class="about fade-in">
