--- a/index.html
+++ b/index.html
@@ -5,125 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Jesika Yusnita Laoly</title>
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
         /* HEADER */
         header {
             background-color: #00BFFF;
             color: white;
             padding: 20px 10px;
             text-align: center;
-            position: relative;
+            animation: slideDown 1s ease-out;
+        }
+
+        @keyframes slideDown {
+            from { transform: translateY(-100px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
 
         header img {
             height: 50px;
         }
 
-        /* NAVIGATION */
-        nav {
-            margin-top: 10px;
-        }
-
-        .nav-links {
-            list-style: none;
+        header nav ul {
             padding: 0;
-            margin: 0;
+            list-style: none;
         }
 
-        .nav-links li {
-            display: inline-block;
+        header nav ul li {
+            display: inline;
             margin: 0 10px;
         }
 
-        .nav-links a {
+        header nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
+            transition: color 0.3s ease-in-out;
         }
 
-        .nav-links a:hover {
+        header nav ul li a:hover {
             color: #FFD700;
         }
 
-        /* HAMBURGER */
-        .hamburger {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-            position: absolute;
-            top: 25px;
-            right: 20px;
+        /* ANIMASI FADE-IN */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 1s ease-out, transform 1s ease-out;
         }
 
-        .hamburger div {
-            width: 25px;
-            height: 3px;
-            background-color: white;
-            margin: 4px 0;
-            transition: 0.4s;
+        .visible {
+            opacity: 1;
+            transform: translateY(0);
         }
-
-        /* DROPDOWN STYLE FOR SMALL SCREENS */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-                flex-direction: column;
-                background-color: #00BFFF;
-                position: absolute;
-                top: 70px;
-                right: 0;
-                width: 100%;
-                text-align: center;
-                z-index: 1000;
-            }
-
-            .nav-links li {
-                display: block;
-                margin: 15px 0;
-            }
-
-            .hamburger {
-                display: flex;
-            }
-
-            .nav-active {
-                display: flex;
-            }
-        }
-    </style>
-</head>
-<body>
-
-<header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-
-    <!-- Hamburger Icon -->
-    <div class="hamburger" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-
-    <!-- Navigation Links -->
-    <nav>
-        <ul class="nav-links" id="navLinks">
-            <li><a href="index.html">Homepage</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="http://localhost/tabel.php">PHP</a></li>
-        </ul>
-    </nav>
-</header>
-
-<script>
-    function toggleMenu() {
-        document.getElementById("navLinks").classList.toggle("nav-active");
-    }
 
         /* SECTION "TENTANG SAYA" */
         .about {
@@ -219,6 +150,19 @@
 </head>
 <body>
 
+<header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="http://localhost/tabel.php">PHP</a></li>
+        </ul>
+    </nav>
+</header>
+
 <!-- TENTANG SAYA -->
 <div class="about fade-in">
     <h2>Tentang Saya</h2>
@@ -297,36 +241,6 @@
         </div>
     </div>
 </div>
-    <!-- TABEL PERKALIAN 10 x 10 -->
-<div class="about fade-in" style="margin-top: 50px;">
-    <h2 style="text-align: center; font-size: 28px; margin-bottom: 20px;">Tabel Perkalian 10 x 10</h2>
-    <div style="overflow-x: auto;">
-        <table class="tabel-perkalian">
-            <thead>
-                <tr>
-                    <th>*</th>
-                    <script>
-                        for (let i = 1; i <= 10; i++) {
-                            document.write(`<th>${i}</th>`);
-                        }
-                    </script>
-                </tr>
-            </thead>
-            <tbody>
-                <script>
-                    for (let i = 1; i <= 10; i++) {
-                        document.write('<tr>');
-                        document.write(`<th>${i}</th>`);
-                        for (let j = 1; j <= 10; j++) {
-                            document.write(`<td>${i * j}</td>`);
-                        }
-                        document.write('</tr>');
-                    }
-                </script>
-            </tbody>
-        </table>
-    </div>
-</div>
 
 <!-- CSS untuk tampilan tabel -->
 <style>
@@ -359,7 +273,7 @@
         transition: background-color 0.3s ease;
     }
 </style>
-<!-- VIDEO YOUTUBE DENGAN ANIMASI -->
+    <!-- VIDEO YOUTUBE DENGAN ANIMASI -->
 <div class="video-container fade-in-zoom" style="margin-top: 60px; text-align: center;">
     <h2 style="font-size: 28px; margin-bottom: 20px;">Tonton Video Pembelajaran</h2>
     <iframe width="640" height="360" 
@@ -387,31 +301,43 @@
         }
     }
 </style>
-    <!-- REKOMENDASI PLAYLIST -->
-<div class="playlist-section">
-  <h2>🎶 Rekomendasi Playlist Spotify</h2>
+<!-- REKOMENDASI MUSIK SPOTIFY -->
+<div class="music-section">
+  <h2>🎧 Rekomendasi Musik Belajar</h2>
 
-  <div class="playlist-list">
+  <div class="music-list">
     <iframe style="border-radius:12px" 
-      src="https://open.spotify.com/embed/playlist/1VT1PxuIbvUb7bhqcZWIYi?utm_source=generator" 
-      width="100%" height="380" frameborder="0" allowfullscreen 
+      src="https://open.spotify.com/embed/track/63VnhcHMnTPCcd24oVajL6?utm_source=generator" 
+      width="100%" height="152" frameborder="0" allowfullscreen 
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
     </iframe>
 
     <iframe style="border-radius:12px" 
-      src="https://open.spotify.com/embed/playlist/34m80HNe2SWDc7hAGvj7rd?utm_source=generator" 
-      width="100%" height="380" frameborder="0" allowfullscreen 
+      src="https://open.spotify.com/embed/track/5Egm9N7FnzsThl1CFXB2mm?utm_source=generator" 
+      width="100%" height="152" frameborder="0" allowfullscreen 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    </iframe>
+
+    <iframe style="border-radius:12px" 
+      src="https://open.spotify.com/embed/track/4snIhdHJ9q2ZNR7egVpG5v?utm_source=generator" 
+      width="100%" height="152" frameborder="0" allowfullscreen 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    </iframe>
+
+    <iframe style="border-radius:12px" 
+      src="https://open.spotify.com/embed/track/21VAHk2V9XKkhsTT0LCyPI?utm_source=generator" 
+      width="100%" height="152" frameborder="0" allowfullscreen 
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
     </iframe>
   </div>
 </div>
 
-<!-- CSS untuk mempercantik -->
+<!-- CSS untuk tampilan -->
 <style>
-  .playlist-section {
+  .music-section {
     margin: 60px auto;
     padding: 30px;
-    background-color: #fff0f5;
+    background-color: #f0f8ff;
     border-radius: 16px;
     width: 90%;
     max-width: 800px;
@@ -419,16 +345,17 @@
     text-align: center;
   }
 
-  .playlist-section h2 {
+  .music-section h2 {
     font-size: 24px;
-    color: #333;
-    margin-bottom: 25px;
+    color: #222;
+    margin-bottom: 20px;
   }
 
-  .playlist-list iframe {
-    margin-bottom: 30px;
+  .music-list iframe {
+    margin-bottom: 20px;
   }
 </style>
+
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
