--- a/About.html
+++ b/About.html
@@ -99,6 +99,18 @@
             color: white;
         }
 
+        /* VISION, MISSION, SERVICES */
+        .section-title {
+            font-size: 1.5em;
+            color: #00BFFF;
+            margin-top: 40px;
+        }
+
+        .section-content {
+            margin-top: 20px;
+            text-align: left;
+        }
+
         /* FOOTER */
         footer {
             background-color: #00BFFF;
@@ -163,6 +175,32 @@
             <td>jesikalaolay19@gmail.com</td>
         </tr>
     </table>
+
+    <!-- Visi dan Misi -->
+    <div class="section-title">Visi dan Misi Perpustakaan</div>
+    <div class="section-content">
+        <h4>Visi</h4>
+        <p>Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi melalui layanan informasi yang cepat, akurat, dan berbasis digital.</p>
+
+        <h4>Misi</h4>
+        <ul>
+            <li>Menyediakan layanan informasi yang mudah diakses oleh seluruh mahasiswa dan masyarakat umum.</li>
+            <li>Meningkatkan kualitas layanan dengan memanfaatkan teknologi informasi.</li>
+            <li>Mendukung proses belajar mengajar di Universitas Sumatera Utara dengan menyediakan bahan bacaan yang relevan dan up-to-date.</li>
+        </ul>
+    </div>
+
+    <!-- Layanan Perpustakaan -->
+    <div class="section-title">Layanan Perpustakaan</div>
+    <div class="section-content">
+        <ul>
+            <li><strong>Peminjaman Buku:</strong> Layanan peminjaman buku untuk mahasiswa dan staf pengajar.</li>
+            <li><strong>Ruangan Baca:</strong> Area nyaman untuk membaca buku dan melakukan penelitian.</li>
+            <li><strong>Penggunaan Komputer dan Internet:</strong> Fasilitas komputer dengan akses internet untuk mencari informasi ilmiah.</li>
+            <li><strong>Perpustakaan Digital:</strong> Koleksi buku dan jurnal digital yang dapat diakses secara online.</li>
+        </ul>
+    </div>
+
 </div>
 
 <footer>
