--- a/About.html
+++ b/About.html
@@ -203,7 +203,6 @@
     <div class="section-content">
         <h4>Visi</h4>
         <p>Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi melalui layanan informasi yang cepat, akurat, dan berbasis digital.</p>
-        <img src="https://www.pexels.com/photo/a-modern-library-with-books-1505101/" alt="Visi Perpustakaan">
         
         <h4>Misi</h4>
         <ul>
@@ -213,26 +212,39 @@
         </ul>
     </div>
 
-    <!-- Layanan Perpustakaan -->
+     <!-- Layanan Perpustakaan -->
     <div class="section-title">Layanan Perpustakaan</div>
     <div class="section-content">
-        <h4>Peminjaman Buku</h4>
-        <img src="https://www.pexels.com/photo/a-library-with-books-and-computers-1579721/" alt="Peminjaman Buku">
-        <p>Layanan peminjaman buku untuk mahasiswa dan staf pengajar. Buku dapat dipinjam untuk jangka waktu tertentu sesuai dengan ketentuan perpustakaan.</p>
+        <div class="service">
+            <h4>1. Layanan Sirkulasi</h4>
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Peminjaman Buku">
+            <p>Layanan ini mencakup peminjaman, pengembalian, dan perpanjangan masa pinjam koleksi cetak seperti buku teks dan referensi. Mahasiswa dapat meminjam buku menggunakan kartu anggota perpustakaan dengan durasi pinjaman sesuai kebijakan (biasanya 1–2 minggu) dan dapat diperpanjang selama tidak sedang dipinjam pengguna lain.</p>
+        </div>
 
-        <h4>Ruangan Baca</h4>
-        <img src="https://www.pexels.com/photo/modern-library-1370293/" alt="Ruangan Baca">
-        <p>Area nyaman untuk membaca buku dan melakukan penelitian. Ruang baca yang tenang dan teratur untuk kenyamanan pengunjung.</p>
+        <div class="service">
+            <h4>2. Layanan Referensi</h4>
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Perpustakaan Digital">
+            <p>Layanan ini menyediakan bantuan dalam menemukan informasi akademik, termasuk ensiklopedia, kamus, jurnal ilmiah, dan karya ilmiah lainnya. Pustakawan siap membantu pencarian sumber referensi terpercaya, baik dalam bentuk cetak maupun digital. Akses ke database ilmiah juga tersedia secara daring.</p>
+        </div>
 
-        <h4>Penggunaan Komputer dan Internet</h4>
-        <img src="https://www.pexels.com/photo/a-person-using-a-laptop-in-a-library-3760743/" alt="Penggunaan Komputer dan Internet">
-        <p>Fasilitas komputer dengan akses internet untuk mencari informasi ilmiah, jurnal, dan referensi online yang mendukung penelitian.</p>
+        <div class="service">
+            <h4>3. Layanan Ruang Baca</h4>
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439249/Huston_Company__Custom_scholar_carrels_and_reading_tables._University_library_iiw5na.jpg" alt="Ruangan Baca">
+            <p>Perpustakaan menyediakan ruang baca yang tenang, nyaman, dan dilengkapi dengan pencahayaan yang baik. Terdapat meja individu, sofa baca, dan ruang diskusi kelompok. Area ini ditujukan bagi pengguna yang ingin membaca di tempat atau mengerjakan tugas secara fokus.</p>
+        </div>
 
-        <h4>Perpustakaan Digital</h4>
-        <img src="https://www.pexels.com/photo/close-up-photography-of-books-and-laptop-3775068/" alt="Perpustakaan Digital">
-        <p>Koleksi buku dan jurnal digital yang dapat diakses secara online. Memudahkan mahasiswa dalam mengakses bahan bacaan kapan saja dan di mana saja.</p>
+        <div class="service">
+            <h4>4. Layanan Akses Komputer dan Internet</h4>
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Penggunaan Komputer dan Internet">
+            <p>Layanan ini menyediakan komputer yang terhubung ke internet untuk keperluan akademik, seperti mengakses jurnal online, katalog perpustakaan (OPAC), e-book, serta portal e-learning kampus. Pengguna juga dapat mencetak tugas atau dokumen dengan layanan tambahan print dan scan.</p>
+        </div>
+
+        <div class="service">
+            <h4>5. Layanan Bimbingan Pemustaka</h4>
+            <img src="https://www.lib.umd.edu/sites/default/files/styles/4_3_960w/public/2021-01/ResearchHelpDesk.jpg" alt="Layanan Bimbingan">
+            <p>Perpustakaan memberikan layanan edukatif berupa bimbingan cara menelusur informasi, penggunaan katalog online (OPAC), serta pelatihan penggunaan database ilmiah. Layanan ini bertujuan meningkatkan literasi informasi dan kemandirian belajar mahasiswa.</p>
+        </div>
     </div>
-</div>
 
 <footer>
     <p>&copy; 2025 All rights reserved</p>
