--- a/About.html
+++ b/About.html
@@ -199,18 +199,23 @@
     </table>
 
     <!-- Visi dan Misi -->
-    <div class="section-title">Visi dan Misi Perpustakaan</div>
-    <div class="section-content">
-        <h4>Visi</h4>
-        <p>Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi melalui layanan informasi yang cepat, akurat, dan berbasis digital.</p>
-        
-        <h4>Misi</h4>
+<div class="section-title">Visi dan Misi Perpustakaan</div>
+<div class="visi-misi-container">
+    <div class="visi-box">
+        <h4><span class="icon">🎯</span>Visi</h4>
+        <p>Menjadi perpustakaan unggulan yang mendukung pengembangan ilmu pengetahuan, teknologi, dan budaya melalui layanan informasi yang cepat, akurat, dan berbasis digital.</p>
+    </div>
+
+    <div class="misi-box">
+        <h4><span class="icon">🚀</span>Misi</h4>
         <ul>
-            <li>Menyediakan layanan informasi yang mudah diakses oleh seluruh mahasiswa dan masyarakat umum.</li>
-            <li>Meningkatkan kualitas layanan dengan memanfaatkan teknologi informasi.</li>
-            <li>Mendukung proses belajar mengajar di Universitas Sumatera Utara dengan menyediakan bahan bacaan yang relevan dan up-to-date.</li>
+            <li>Menyediakan layanan informasi yang mudah diakses bagi sivitas akademika dan masyarakat umum.</li>
+            <li>Meningkatkan kualitas layanan melalui pemanfaatan teknologi informasi terkini.</li>
+            <li>Menjadi pusat sumber belajar yang mendukung kegiatan pendidikan, penelitian, dan pengabdian masyarakat.</li>
+            <li>Menjalin kerja sama dengan perpustakaan dan lembaga informasi lainnya di tingkat nasional dan internasional.</li>
         </ul>
     </div>
+</div>
 
      <!-- Layanan Perpustakaan -->
     <div class="section-title">Layanan Perpustakaan</div>
