--- a/About.html
+++ b/About.html
@@ -222,14 +222,16 @@
 <div class="section-title"><h3>Visi dan Misi Perpustakaan</h3></div>
 <div class="section-content mission-vision-section">
 
-    <!-- VISI -->
-    <div class="vision-box">
-        <i class="fas fa-eye icon-vision"></i>
-           <h4><i class="fas fa-bullseye"></i> Visi</h4>
-        <p>
-            Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi 
-            melalui layanan informasi yang cepat, akurat, dan berbasis digital.
-        </p>
+   <!-- VISI -->
+    <div class="mission-item">
+        <i class="fas fa-eye mission-icon"></i>
+        <div>
+            <h4>Visi</h4>
+            <p>
+                Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi 
+                melalui layanan informasi yang cepat, akurat, dan berbasis digital.
+            </p>
+        </div>
     </div>
 
     <!-- MISI -->
