--- a/tabel.html
+++ b/tabel.html
@@ -2,115 +2,208 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Tabel Perkalian</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Jesika Yusnita Laoly</title>
     <style>
+        /* RESET DAN DASAR */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            background-color: #f4f8fb;
+            color: #333;
+            line-height: 1.6;
         }
 
-        nav {
-            background-color: #333;
-            padding: 10px 20px;
-        }
+      .header-library {
+    position: relative;
+    background-image: url('https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746550161/f9f1d13d-a4f6-4ce5-beba-dc65309ee791_xlmqgd.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 350px;
+    color: white;
+    overflow: hidden;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: fadeIn 1.5s ease-in-out;
+}
 
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
+.header-library .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.4); /* overlay gelap agar teks terbaca */
+    z-index: 0;
+}
 
-        nav ul li {
-            margin-right: 20px;
-        }
+.header-content {
+    position: relative;
+    z-index: 1;
+    padding: 20px;
+    text-align: center;
+}
 
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
+.header-content img {
+    height: 60px;
+    margin-bottom: 10px;
+}
 
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
+.header-content h1 {
+    font-size: 28px;
+    margin: 10px 0;
+    color: white;
+}
 
-        h2 {
-            text-align: center;
-            margin-top: 30px;
+.header-content nav ul {
+    padding: 0;
+    list-style: none;
+}
+
+.header-content nav ul li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.header-content nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease-in-out;
+}
+
+.header-content nav ul li a:hover {
+    color: #FFD700;
+}
+        
+        /* TABEL PERKALIAN */
+        .table-container {
+            overflow-x: auto;
+            margin: 20px auto;
+            max-width: 95%;
         }
 
         table {
             border-collapse: collapse;
-            margin: 30px auto;
-            text-align: center;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         th, td {
-            border: 1px solid #000;
+            border: 1px solid #ddd;
             padding: 10px;
+            text-align: center;
         }
 
         th {
             background-color: #00BFFF;
             color: white;
         }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        /* FOOTER */
+        footer {
+            background-color: #00BFFF;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 30px;
+            animation: fadeIn 1s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* RESPONSIF */
+        @media (max-width: 600px) {
+            table {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="profil.html">Profil</a></li>
-            <li><a href="tabel.html">Tabel</a></li>
-        </ul>
-    </nav>
+<header class="header-library">
+    <div class="overlay"></div>
+    <div class="header-content">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
+        <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="tabel.html">Tabel</a></li>
+                <li><a href="http://localhost/tabel.php">PHP</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+    
+<h2>Tabel Perkalian 10 x 10</h2>
 
-    <h2>Tabel Perkalian 10 x 10</h2>
-
+<div class="table-container">
     <table id="perkalian">
         <thead>
             <tr>
                 <th>*</th>
-                <!-- Kolom Header 1-10 -->
+                <!-- Kolom Header 1-10 akan ditambahkan dengan JS -->
             </tr>
         </thead>
         <tbody>
-            <!-- Baris akan diisi oleh JavaScript -->
+            <!-- Baris tabel akan diisi oleh JavaScript -->
         </tbody>
     </table>
+</div>
 
-    <script>
-        const table = document.getElementById('perkalian');
-        const theadRow = table.querySelector('thead tr');
+<footer>
+    &copy; 2025 Perpustakaan Jesika Yusnita Laoly. All rights reserved.
+</footer>
 
-        // Tambah header kolom 1-10
-        for (let i = 1; i <= 10; i++) {
-            const th = document.createElement('th');
-            th.textContent = i;
-            theadRow.appendChild(th);
+<script>
+    const table = document.getElementById('perkalian');
+    const theadRow = table.querySelector('thead tr');
+
+    // Tambah header kolom 1-10
+    for (let i = 1; i <= 10; i++) {
+        const th = document.createElement('th');
+        th.textContent = i;
+        theadRow.appendChild(th);
+    }
+
+    // Tambah isi tabel
+    const tbody = table.querySelector('tbody');
+    for (let i = 1; i <= 10; i++) {
+        const row = document.createElement('tr');
+        const th = document.createElement('th');
+        th.textContent = i;
+        row.appendChild(th);
+
+        for (let j = 1; j <= 10; j++) {
+            const td = document.createElement('td');
+            td.textContent = i * j;
+            row.appendChild(td);
         }
 
-        // Tambah isi tabel
-        const tbody = table.querySelector('tbody');
-        for (let i = 1; i <= 10; i++) {
-            const row = document.createElement('tr');
-            const th = document.createElement('th');
-            th.textContent = i;
-            row.appendChild(th);
-
-            for (let j = 1; j <= 10; j++) {
-                const td = document.createElement('td');
-                td.textContent = i * j;
-                row.appendChild(td);
-            }
-
-            tbody.appendChild(row);
-        }
-    </script>
+        tbody.appendChild(row);
+    }
+</script>
 
 </body>
 </html>
